validator_derive_tests/tests/compile-fail/custom/different_lifetime.stderr
error: Invalid argument reference: The lifetime `'a` is not supported. Please use the validator lifetime `'v_a`
 --> $DIR/different_lifetime.rs:9:55
  |
9 |     #[validate(custom(function = "hello_world", arg = "&'a mut String"))]
  |                                                       ^^^^^^^^^^^^^^^^
